# HyTech_sim

./: .gitignore  README.md  RoadProfile.m  lsimPrep.m
A Arm Forces/: AArmForceSolver.m  AArmForceSolver.mlapp
Controllers/: PID_TV.slx
Data Analysis/: HT07_vehicle_parameters.m  dataPlotsHT07.m  sensorAnalysis.m  untitled3.m  vectorNavAcq.m
Driver Model/: Driver.slx
Lap Event Solver/: Accel.xlsx  LapSolver.m  Oval Expanded.xlsx  UTrack.xlsx
LapEventSolver/: LapSolver.m  Oval.xlsx  Skidpad Straight Start End.xlsx  Skidpad.xlsx  TrackGen.m  VehicleCharac.m
Lap_Sim_Testing/: test.m
Lateral Models/: FullCarLateral.slx  FullCarLateralParams.m  HT08LeftHandCornerSteerTorqueParams.xlsx  LateralModelPlot.m
Pacejka52/: COMBINED ALIGNING TORQUE COEFFS.mat  COMBINED LATERAL FORCE COEFFS.mat  COMBINED LONGITUDINAL FORCE COEFFS.mat  COMBINED OVERTURNING MOMENT COEFFS.mat  FX_EXTRAPOLATION_COEFF.m  FY_EXTRAPOLATION_COEFF.m  HyTech_MF52_fit.m  PACEJKA FIT FIGURES.docx  PLS LONGITUDINAL FORCE COEFFS.mat  PSS ALIGNING TORQUE COEFFS.mat  PSS LATERAL FORCE COEFFS.mat  Pacejka52_COMBINED_FX.m  Pacejka52_COMBINED_FY.m  Pacejka52_COMBINED_MX.m  Pacejka52_COMBINED_MZ.m  Pacejka52_PLS_FX.m  Pacejka52_PSS_FY.m  Pacejka52_PSS_MZ.m  getTireForces.m
Pacejka52/FXN VALIDATION/: validationScript.m
Vertical Models/: BicyclePitch.m  FullCar.m  Michelin AutoX data0053 Roll Car Model Figure.fig  QuarterCar.m  RollCar.m
controllers/: CMakeLists.txt  README.md
controllers/include/TorqueVectoringController/: TorqueVectoringController.h
controllers/src/: TorqueVectoringController.cpp
(+22 files in other folders)
